Revision history for perl distribution Mojolicious-Plugin-AssetPack

0.5201 Not Released
 - Fix sprites.t

0.52 2015-04-18T12:54:40+0200
 - Add support for generating image sprites and css
 - Add EXPERIMENTAL ::Handlers::Sprites, ::Handlers::Http and ::Handlers::Https
 - Add ::Asset::content()
 - Rename ::Asset::url() to path().
 - Remove ::Asset::add_chunk()

0.51 2015-04-16T08:15:50+0200
 - Can reload assets on server reload (EXPERIMENTAL)

0.50 2015-04-13T11:37:08Z +0200
 - Need to start with a fresh asset to avoid adding duplicate processed
   data to the same asset.

0.49 2015-04-05T09:54:27Z
 - Will not pack asset.ext.swp files

0.48 2015-04-05T09:19:01Z
 - Fix serving in memory assets with Content-Type
 - Fix serving in memory assets with Last-Modified

0.47 2015-04-04T13:53:32Z
 - Fix Mojo::Base::tap() does not support arguments before 5.57

0.4602 2015-04-02T18:44:01Z
 - Improved cpantesters

0.46 2015-04-01T15:09:35Z
 - Remove "fallback" attribute #44 (experimental)
 - Remove "process" method
 - Will prevent AssetPack from registering twice
 - Will not write assets to "mojo-assetpack-public" in TMPDIR #46
   (experimental)
 - Allow in-memory assets with out_dir(""), MOJO_ASSETPACK_DEBUG=1 or
   read-only static dirs. #46 (experimental)

0.45 2015-03-31T22:02:06Z
 - Can also fetch remote assets from local $app #30
 - Will calculate MD5 sum recursively for sass/scss #44
 - Add Cookbook

0.44 2015-03-23T13:00:45Z
 - Add ".min.ext" to minified asset filename
 - Change filename for assets with errors from "-with-error.ext" to
   ".err.ext"
 - Will look for existing assets even with MOJO_ASSETPACK_DEBUG=1
 - Remove errmsg() from Mojolicious::Plugin::AssetPack::Preprocessor
 - Remove detect() from Mojolicious::Plugin::AssetPack::Preprocessors

0.43 2015-03-20T11:27:22Z
 - Same CSS::Sass detection for Sass as for Scss preprocessor

0.42 2015-03-16T19:31:36Z
 - Fix "Unescaped left brace in regex is deprecated" warnings

0.41 2015-03-16T13:47:17Z